BookMarket의 9장 유효성검사 1. Bean Validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=BookMarket
+spring.messages.basename=messages
+spring.messages.encoding=UTF-8
 server.servlet.context-path=/BookMarket
 
 spring.servlet.multipart.enabled=true
