BookMarket의 9장 유효성검사 4.Constraint Validator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=BookMarket
-spring.messages.basename=messages
+spring.messages.basename=messages/messages
 spring.messages.encoding=UTF-8
 server.servlet.context-path=/BookMarket
 
